feat: 增加一个404页面跳转

--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -6,10 +6,10 @@
   outline: 0;
   vertical-align: baseline;
 }
-::selection {
-  background-color: #107E63; 
-  color: #fff;
-}
+// ::selection {
+//   background-color: #107E63; 
+//   color: #fff;
+// }
 html,
 body {
   overflow: hidden;
